versão da banca.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -70,26 +70,6 @@ Computer_Science.bib
   language={English}
 }
 
-@article{Miltersen,
-  author = {Miltersen, Peter Bro and Radhakrishnan, Jaikumar and Wegener, Ingo},
-  title = {On Converting CNF to DNF},
-  journal = {Theor. Comput. Sci.},
-  issue_date = {30 November 2005},
-  volume = {347},
-  number = {1-2},
-  month = nov,
-  year = {2005},
-  issn = {0304-3975},
-  pages = {325--335},
-  numpages = {11},
-  url = {http://dx.doi.org/10.1016/j.tcs.2005.07.029},
-  doi = {10.1016/j.tcs.2005.07.029},
-  acmid = {1133543},
-  publisher = {Elsevier Science Publishers Ltd.},
-  address = {Essex, UK},
-  keywords = {circuit size, conjunctive normal form, disjunctive normal form, switching lemma},
-} 
-
 @inproceedings{Katajainen,
   author = {Katajainen, Jyrki and Madsen, Jeppe Nejsum},
   title = {Performance Tuning an Algorithm for Compressing Relational Tables},
@@ -106,7 +86,7 @@ Computer_Science.bib
 }
 
 @MISC{Een03anextensible,
-  author = {Niklas Een and Niklas Sörensson},
+  author = {Een, N. and S{\"{o}}rensson, N.},
   title = {An Extensible SAT-solver [ver 1.2]},
   year = {2003}
 }
@@ -462,3 +442,46 @@ address="Berlin, Heidelberg",
 pages="249--258",
 isbn="978-3-540-68111-3",
 }
+
+@inproceedings{Bingham2010,
+ author = {Bingham, Brad and Bingham, Jesse and Paula, Flavio M.  de and Erickson, John and Singh, Gaurav and Reitblatt, Mark},
+ title = {Industrial Strength Distributed Explicit State Model Checking},
+ booktitle = {Proceedings of the 2010 Ninth International Workshop on Parallel and Distributed Methods in Verification, and Second International Workshop on High Performance Computational Systems Biology},
+ series = {PDMC-HIBI '10},
+ year = {2010},
+ isbn = {978-0-7695-4265-2},
+ pages = {28--36},
+ numpages = {9},
+ url = {http://dx.doi.org/10.1109/PDMC-HiBi.2010.13},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Explicit State Model Checking, Distributed Model Checking, Murphi},
+} 
+
+@inproceedings{Cronqvist2004,
+ author = {Cronqvist, Mats},
+ title = {Troubleshooting a Large Erlang System},
+ booktitle = {Proceedings of the 2004 ACM SIGPLAN Workshop on Erlang},
+ series = {ERLANG '04},
+ year = {2004},
+ isbn = {1-58113-918-7},
+ location = {Snowbird, Utah, USA},
+ pages = {11--15},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1022471.1022474},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {erlang},
+}
+
+@inproceedings{audemard2012,
+  TITLE = {{Glucose 2.1: Aggressive - but Reactive - Clause Database Management, Dynamic Restarts}},
+  AUTHOR = {Audemard, Gilles and Simon, Laurent},
+  URL = {https://hal.inria.fr/hal-00845494},
+  BOOKTITLE = {{International Workshop of Pragmatics of SAT (Affiliated to SAT)}},
+  ADDRESS = {Trento, Italy},
+  YEAR = {2012},
+  MONTH = Jun,
+  HAL_ID = {hal-00845494},
+  HAL_VERSION = {v1},
+} 
